StreamingAsset을 깃에 올리지 않도록 수정

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,8 @@ ExportedObj/
 
 # Unity3D Generated File On Crash Reports
 sysinfo.txt
+
+
+# StreamingAssetFolder (for ksh song file. if need to upload other files, temporary remove or comment out below line)
+
+[Aa]ssets/StreamingAssets/
